force-app/main/default/objects/Blocked_Under_Protection__c/Blocked_Under_Protection__c.object-meta.xml
<CustomObject>
    <label>Blocked Under Protection</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blocked Under Protections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>