force-app/main/default/objects/Blocked_Under_Protection__c/fields/Protected__c.field-meta.xml
<CustomField>
    <fullName>Protected__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Protected</label>
    <type>Checkbox</type>
</CustomField>